<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.scand.internship.mars_scout.MainActivity">

        <ImageView
            android:id="@+id/launch_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/launch_logo_description"
            android:src="@drawable/rover_logo"
            app:layout_constraintBottom_toTopOf="@+id/editor_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/editor_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="?colorPrimary"
            android:contentDescription="@string/edit_map"
            android:text="@string/edit_map"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/list_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/list_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?colorPrimary"
            android:contentDescription="@string/chose_map"
            android:text="@string/chose_map"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>